# DittoMation

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SOCIAL_POSTS.md  docker-compose.yml  index.html  instructions.txt  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  social-preview.html
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/agents/: my-agent.agent.md
.github/workflows/: ci.yml  copilot-analysis.yml  docs.yml  release.yml
FUTURE_ENHANCEMENTS/: index.html
android/: .project
api/: index.html
approach/: index.html
cli/: index.html
confidence-scoring/: index.html
config/: default.json  device_example.json
core/: __init__.py  ad_filter.py  android.py  automation.py  cli.py  config_manager.py  control_flow.py  device_manager.py  emulator.py  exceptions.py  expressions.py  logging_config.py  validators.py  variables.py
core/cloud/: __init__.py  aws.py  base.py  firebase.py  models.py
demo/: index.html
docker/: entrypoint.sh
docs/: FUTURE_ENHANCEMENTS.md  api.md  approach.md  cli.md  confidence-scoring.md  getting-started.md  index.md  quickstart.md  variables-and-control-flow.md
examples/: variables_and_loops.json
getting-started/: index.html
quickstart/: index.html
recorder/: __init__.py  adb_wrapper.py  element_matcher.py  event_listener.py  gesture_classifier.py  interactive_recorder.py  main.py  ui_dumper.py  workflow.py
replayer/: __init__.py  executor.py  locator.py  main.py  nl_runner.py  text_runner.py
search/: search_index.json
tests/: __init__.py  test_ad_filter.py  test_android.py  test_cloud_models.py  test_config_manager.py  test_control_flow.py  test_element_matcher.py  test_exceptions.py  test_executor.py  test_expressions.py  test_gesture_classifier.py  test_locator.py  test_logging_config.py  test_validators.py  test_variables.py  test_workflow.py
variables-and-control-flow/: index.html
(+8 files in other folders)
